# minary-agent

./: .eslintrc.json  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml  tsconfig.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  evals.yml  heartbeat.yml
agents/: __init__.py  executor.py  planner.py  router.py
docs/: .pr-stub-feat-eval-ci-gate.md  .pr-stub-feat-mcp-server.md  .pr-stub-feat-thinking-cache.md  .pr-stub-feat-tool-loop.md  .pr-stub-refactor-split-agent.md  changelog-notes.md  model_compatibility.md  usage.md
evals/: __init__.py  harness.py
evals/results/: heartbeat.json
evals/suites/: planning.jsonl  tool_use.jsonl
examples/: README.md  basic-task.md
harness/: cache.py  runner.py  trace.py
prompts/: error_recovery.md  executor.md  planner.md  router.md  system.md  tool_use_guide.md
src/: cli.mjs  config.mjs  core.mjs  index.mjs  log.mjs  util.mjs
src/mcp/: server.mjs  tools.mjs
tests/: core.test.mjs  smoke.test.mjs
tools/: calculator.py  file_io.py  web_search.py
traces/: .gitignore
