[project]
name = "minary-agent"
version = "0.0.1"
description = "autonomous AI agent framework — self-improving runtime with built-in learning loops, multi-chain execution, 40+ tools."
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
